--- a/mn/mn_de.tex
+++ b/mn/mn_de.tex
@@ -5498,7 +5498,6 @@ Fehlt sonst noch was, uns keiner schilt:
 wer weiss, ob's nicht gar einer Nottaufe gilt.
 Dass die Weise Kraft behalte zum Leben,
 will ich nur gleich den Namen ihr geben:
-%% START HERE: KNAPPERTSBUSCH CD4
 ``Die selige Morgentraumdeut-Weise''
 sei sie genannt zu des Meisters Preise.
 Nun wachse sie gross, ohn' Schad' und Bruch.
@@ -5530,7 +5529,7 @@ galt es zu bezwingen.
 Deine Liebe liess mir es gelingen,
 meines Herzens süss' Beschwer' deutend zu bezwingen.
 
-MAGDALENE und DAVID
+\speaker{\Magdalene und \David}
 Wach' oder träum' ich schon so früh?
 Das zu erklären macht mir Müh':
 
@@ -5543,7 +5542,7 @@ Ob es noch der Morgentraum?
 \Sachsspeaks
 's war ein schöner Morgen-Traum:
 
-EVA und WALTHER
+\speaker{\Eva und \Walther}
 Selig deut' ich mir es kaum.
 Doch die Weise, was sie leise
 mir/dir vertraut
@@ -5551,7 +5550,7 @@ mir/dir vertraut
 \Waltherspeaks
 im stillen Raum,
 
-Beide
+\speaker{Beide}
 hell und laut,
 in der Meister vollem Kreis
 
@@ -5569,7 +5568,7 @@ sagt mir laut:
 auch der Jugend ew'ges Reis
 grünt nur durch des Dichters Preis.
 
-MAGDALENE und DAVID
+\speaker{\Magdalene und \David}
 's ist wohl nur ein Morgentraum?
 Was ich seh', begreif' ich kaum!
 
@@ -5589,25 +5588,35 @@ wer weiss,
 dass ich die Meist'rin bald heiss'!
 
 \Sachsspeaks
-zu den übrigen sich wendend
+
+\direct{zu den übrigen sich wendend}
+
 Jetzt all' am Fleck!
-zu Eva
+
+\direct{zu Eva}
+
 Den Vater grüss'!
 Auf nach der Wies', schnell auf die Füss'!
-Eva und Magdalene gehen
-zu Walther
-Nun, Junker, kommt! Habt frohen Mut! -
+
+\direct{\Eva und \Magdalene gehen}
+
+
+\direct{zu \Walther}
+
+Nun, Junker, kommt! Habt frohen Mut!
 David, Gesell! Schliess' den Laden gut!
 
-Als Sachs und Walther ebenfalls auf die Strasse gehen und David über das Schliessen der Ladentür sich hermacht, wird ein Vorhang von beiden Seiten zusammengezogen, so dass im Proszenium er die Szene gänzlich verschliesst
+\StageDir{Als \Sachs und \Walther ebenfalls auf die Strasse gehen und \David über das Schliessen der Ladentür sich hermacht, wird ein Vorhang von beiden Seiten zusammengezogen, so dass im Proszenium er die Szene gänzlich verschliesst.}
 
 
 \scene
 
-Die Vorhänge sind nach der Höhe aufgezogen worden; die Bühne ist verwandelt. Diese stellt einen freien Wiesenplan, im ferneren Hintergrunde die Stadt Nürnberg. Die Pegnitz schlängelt sich durch den Plan, der schmale Fluss ist an den nächsten Punkten praktikabel gehalten. Buntbeflaggte Kähne setzen die ankommenden, festlich gekleideten Bürger der Zünfte mit Frauen und Kindern, an das Ufer der Festwiese über. Eine erhöhte Bühne mit Bänken und Sitzen darauf ist rechts zur Seite aufgeschlagen; bereits ist sie mit den Fahnen der angekommenen Zünfte geschmückt; im Verlaufe stecken die Fahnenträger der noch ankommenden Zünfte ihre Fahnen ebenfalls um die Sängerbühne auf so dass diese schliesslich nach drei Seiten hin ganz davon eingefasst ist. Zelte mit Getränken und Erfrischungen aller Art begrenzen im übrigen die Seiten des vorderen Hauptraumes. Vor den Zelten geht es bereits lustig her: Bürger mit Frauen, Kindern und Gesellen sitzen und lagern daselbst. Die Lehrbuben der Meistersinger, festlich gekleidet, mit Blumen und Bändern reich und anmutig geschmückt, üben mit schlanken Stäben, die ebenfalls mit Blumen und Bändern geziert sind, in lustiger Weise das Amt von Herolden und Marschällen aus. Sie empfangen die am Ufer Aussteigenden, ordnen die Züge der Zünfte und geleiten diese nach der Sängerbühne, von wo aus, nachdem der Bannerträger die Fahne aufgepflanzt, die Zunftbürger und Gesellen sich unter den Zelten zerstreuen. Soeben werden die Schuster am Ufer empfangen und nach dem Vordergrunde geleitet
+\StageDir{Die Vorhänge sind nach der Höhe aufgezogen worden; die Bühne ist verwandelt. Diese stellt einen freien Wiesenplan, im ferneren Hintergrunde die Stadt Nürnberg. Die Pegnitz schlängelt sich durch den Plan, der schmale Fluss ist an den nächsten Punkten praktikabel gehalten. Buntbeflaggte Kähne setzen die ankommenden, festlich gekleideten Bürger der Zünfte mit Frauen und Kindern, an das Ufer der Festwiese über. Eine erhöhte Bühne mit Bänken und Sitzen darauf ist rechts zur Seite aufgeschlagen; bereits ist sie mit den Fahnen der angekommenen Zünfte geschmückt; im Verlaufe stecken die Fahnenträger der noch ankommenden Zünfte ihre Fahnen ebenfalls um die Sängerbühne auf so dass diese schliesslich nach drei Seiten hin ganz davon eingefasst ist. Zelte mit Getränken und Erfrischungen aller Art begrenzen im übrigen die Seiten des vorderen Hauptraumes. Vor den Zelten geht es bereits lustig her: Bürger mit Frauen, Kindern und Gesellen sitzen und lagern daselbst. Die Lehrbuben der Meistersinger, festlich gekleidet, mit Blumen und Bändern reich und anmutig geschmückt, üben mit schlanken Stäben, die ebenfalls mit Blumen und Bändern geziert sind, in lustiger Weise das Amt von Herolden und Marschällen aus. Sie empfangen die am Ufer Aussteigenden, ordnen die Züge der Zünfte und geleiten diese nach der Sängerbühne, von wo aus, nachdem der Bannerträger die Fahne aufgepflanzt, die Zunftbürger und Gesellen sich unter den Zelten zerstreuen. Soeben werden die Schuster am Ufer empfangen und nach dem Vordergrunde geleitet.}
 
-DIE SCHUSTER
-mit fliegender Fahne aufziehend
+\speaker{Die Schuster}
+
+\direct{mit fliegender Fahne aufziehend}
+
 Sankt Krispin, lobet ihn!
 War gar ein heilig' Mann,
 zeigt', was ein Schuster kann.
@@ -5621,10 +5630,14 @@ und ist vom Gerber das Fell erst weg,
 dann streck, streck, streck!
 Leder taugt nur am rechten Fleck.
 
-Die Stadtwächter und Heerhornbläser mit Trompeten und Trommeln sowie die Stadtpfeifer, Lautenmacher usw. ziehen, auf ihren Instrumenten spielend, auf. Ihnen folgen Gesellen mit Kinderinstrumenten
 
-DIE SCHNEIDER
-mit fliegender Fahne aufziehend
+\direct{Die Stadtwächter und Heerhornbläser mit Trompeten und Trommeln sowie die Stadtpfeifer, Lautenmacher usw. ziehen, auf ihren Instrumenten spielend, auf. Ihnen folgen Gesellen mit Kinderinstrumenten}
+
+
+\speaker{Die Schneider}
+
+\direct{mit fliegender Fahne aufziehend}
+
 Als Nürnberg belagert war
 und Hungersnot sich fand,
 wär' Stadt und Volk verdorben gar,
@@ -5640,8 +5653,10 @@ hat's drin noch so lustige Meck-meck-meck!
 Meck! Meck! Meck!
 Wer glaubt's, dass ein Schneider im Bocke steck'!
 
-DIE BÄCKER
-ziehen mit fliegender Fahne auf
+\speaker{Die Bäcker}
+
+\direct{ziehen mit fliegender Fahne auf}
+
 Hungersnot! Hungersnot!
 Das ist ein greulich Leiden!
 Gäb' euch der Bäcker nicht täglich Brot,
@@ -5650,70 +5665,101 @@ Beck! Beck! Beck!
 Täglich auf dem Fleck!
 Nimm uns den Hunger weg!
 
-DIE SCHUSTER
-welche ihre Fahne aufgesteckt, begegnen beim Herabschreiten von der Sängerbühne den Bäckern
+\speaker{Die Schuster}
+
+\direct{welche ihre Fahne aufgesteckt, begegnen beim Herabschreiten von der Sängerbühne den Bäckern}
+
 Streck! Streck! Streck!
 Leder taugt nur am rechten Fleck.
 
-DIE SCHNEIDER
-nachdem die Fahne aufgesteckt, herabschreitend
+\speaker{Die Schneider}
+
+\direct{nachdem die Fahne aufgesteckt, herabschreitend}
+
 Meck! Meck! Meck!
 Wer meint, dass ein Schneider im Bocke steck'!
 
-Ein bunter Kahn mit jungen Mädchen in reicher bäuerischer Tracht kommt an
 
-LEHRBUBEN
-laufen nach dem Gestade
+\direct{Ein bunter Kahn mit jungen Mädchen in reicher bäuerischer Tracht kommt an}
+
+
+\speaker{Lehrbuben}
+
+\direct{laufen nach dem Gestade}
+
 Herrje! Herrje! Mädel von Fürth!
 Stadtpfeifer, spielt, dass's lustig wird!
 
-Sie heben die Mädchen aus dem Kahn. Das Charakteristische des Tanzes, mit welchem die Lehrbuben und Mädchen zunächst nach dem Vordergrund kommen, besteht darin, dass die Lehrbuben die Mädchen scheinbar nur an den Platz bringen wollen; sowie die Gesellen zugreifen wollen, ziehen die Buben die Mädchen aber immer wieder zurück, als ob sie sie anderswo unterbringen wollten, wobei sie den ganzen Kreis, wie wählend, ausmessen und somit die scheinbare Absicht anmutig und lustig verzögern
+\StageDir{Sie heben die Mädchen aus dem Kahn. Das Charakteristische des Tanzes, mit welchem die Lehrbuben und Mädchen zunächst nach dem Vordergrund kommen, besteht darin, dass die Lehrbuben die Mädchen scheinbar nur an den Platz bringen wollen; sowie die Gesellen zugreifen wollen, ziehen die Buben die Mädchen aber immer wieder zurück, als ob sie sie anderswo unterbringen wollten, wobei sie den ganzen Kreis, wie wählend, ausmessen und somit die scheinbare Absicht anmutig und lustig verzögern.}
 
 \Davidspeaks
-kommt vom Landungsplatz vor und sieht missbilligend dem Tanze zu
+
+\direct{kommt vom Landungsplatz vor und sieht missbilligend dem Tanze zu}
+
 Ihr tanzt? Was werden die Meister sagen?
 Die Lehrbuben drehen ihm Nasen
-Hört nicht? - Lass ich mir's auch behagen!
-Er nimmt sich ein junges, schönes Mädchen und gerät im Tanze mit ihr schnell in grosses Feuer. Die Zuschauer freuen sich und lachen
+Hört nicht? Lass ich mir's auch behagen!
 
-EINIGE LEHRBUBEN
-winken David
+\direct{Er nimmt sich ein junges, schönes Mädchen und gerät im Tanze mit ihr schnell in grosses Feuer. Die Zuschauer freuen sich und lachen}
+
+
+\speaker{Einige Lehrbuben}
+
+\direct{winken \David}
+
 David! David! Die Lene sieht zu!
 
 \Davidspeaks
-lässt das Mädchen erschrocken fahren, um das die Lehrbuben sogleich tanzend einen Kreis schliessen. Da er Lene nirgends gewahrt, merkt David, dass er nur geneckt worden, durchbricht den Kreis, erfasst sein Mädchen wieder und tanzt noch feuriger weiter
+
+\direct{lässt das Mädchen erschrocken fahren, um das die Lehrbuben sogleich tanzend einen Kreis schliessen. Da er Lene nirgends gewahrt, merkt \David, dass er nur geneckt worden, durchbricht den Kreis, erfasst sein Mädchen wieder und tanzt noch feuriger weiter}
+
 Ach, lasst mich mit euren Possen in Ruh'!
-Die Buben suchen ihm das Mädchen zu entreissen, er wendet sich mit ihr jedesmal glücklich ab, so dass nun ein ähnliches Spiel entsteht wie zuvor, als die Gesellen nach den Mädchen fassten
 
-GESELLEN
-vom Ufer her
+\direct{Die Buben suchen ihm das Mädchen zu entreissen, er wendet sich mit ihr jedesmal glücklich ab, so dass nun ein ähnliches Spiel entsteht wie zuvor, als die Gesellen nach den Mädchen fassten}
+
+
+\speaker{Gesellen}
+
+\direct{vom Ufer her}
+
 Die Meistersinger!
 
-LEHRBUBEN
+\speaker{Lehrbuben}
 Die Meistersinger!
-Sie unterbrechen schnell den Tanz und eilen zum Ufer
+
+\direct{Sie unterbrechen schnell den Tanz und eilen zum Ufer}
+
 
 \Davidspeaks
 Herrgott! Ade, ihr hübschen Dinger!
-Er gibt dem Mädchen einen feurigen Kuss und reisst sich los
 
-Die Lehrbuben reihen sich zum Empfang der Meistersinger. Das Volk macht ihnen willig Platz. Die Meistersinger ordnen sich am Landungsplatze zum festlichen Aufzuge. Wenn Kothner im Vordergrunde ankommt, wird die geschwungene Fahne, auf welcher König David mit der Harfe abgebildet ist, von allem Volk mit Hutschwenken begrüsst. Der Zug der Meistersinger ist nun auf der Singerbühne angelangt, wo Kothner die Fahne aufpflanzt. Pogner, Eva an der Hand führend, diese von festlich geschmückten, reich gekleideten jungen Mädchen, unter denen auch Magdalene, begleitet, voran. Als Eva, von den Mädchen umgeben, den mit Blumen geschmückten Ehrenplatz eingenommen und alle übrigen, die Meister auf den Bänken, die Gesellen hinter ihnen stehend, ebenfalls Platz genommen, treten die Lehrbuben, dem Volke zugewendet, feierlich vor die Bühne in Reih und Glied
+\direct{Er gibt dem Mädchen einen feurigen Kuss und reisst sich los}
 
-LEHRBUBEN
+
+\StageDir{Die Lehrbuben reihen sich zum Empfang der Meistersinger. Das Volk macht ihnen willig Platz. Die Meistersinger ordnen sich am Landungsplatze zum festlichen Aufzuge. Wenn Kothner im Vordergrunde ankommt, wird die geschwungene Fahne, auf welcher König David mit der Harfe abgebildet ist, von allem Volk mit Hutschwenken begrüsst. Der Zug der Meistersinger ist nun auf der Singerbühne angelangt, wo Kothner die Fahne aufpflanzt. Pogner, Eva an der Hand führend, diese von festlich geschmückten, reich gekleideten jungen Mädchen, unter denen auch Magdalene, begleitet, voran. Als Eva, von den Mädchen umgeben, den mit Blumen geschmückten Ehrenplatz eingenommen und alle übrigen, die Meister auf den Bänken, die Gesellen hinter ihnen stehend, ebenfalls Platz genommen, treten die Lehrbuben, dem Volke zugewendet, feierlich vor die Bühne in Reih und Glied.}
+
+\speaker{Lehrbuben}
 Silentium! Silentium!
-Sachs erhebt sich und tritt vor. Bei seinem Anblick stösst sich alles an; Hüte und Mützen werden abgezogen. Alle deuten auf ihn
+
+\direct{\Sachs erhebt sich und tritt vor. Bei seinem Anblick stösst sich alles an; Hüte und Mützen werden abgezogen. Alle deuten auf ihn}
+
 Macht kein Reden und kein Gesumm'.
 
-EINIGE IM VOLK
+\speaker{Einige im Volk}
 Ha! Sachs! 's ist Sachs!
 Seht Meister Sachs!
 
-MEHRERE
-Stimmt an! Stimmt an!
-Alle Sitzenden erheben sich; die Männer bleiben mit entblösstem Haupte. Beckmesser bleibt, mit dem Memorieren des Gedichtes beschäftigt, hinter den anderen Meistern versteckt, so dass er bei dieser Gelegenheit der Beachtung des Publikums entzogen wird
+\speaker{Mehrere}
 
-ALLE
-ausser Sachs
+Stimmt an! Stimmt an!
+
+\direct{Alle Sitzenden erheben sich; die Männer bleiben mit entblösstem Haupte. \Beckmesser bleibt, mit dem Memorieren des Gedichtes beschäftigt, hinter den anderen Meistern versteckt, so dass er bei dieser Gelegenheit der Beachtung des Publikums entzogen wird}
+
+
+\speaker{Alle}
+
+\direct{ausser Sachs}
+
 Wach' auf, es nahet gen den Tag,
 ich hör' singen im grünen Hag
 ein' wonnigliche Nachtigal,
@@ -5721,14 +5767,18 @@ ihr' Stimm' durchdringet Berg und Tal;
 die Nacht neigt sich zum Okzident,
 der Tag geht auf von Orient,
 die rotbrünstige Morgenröt'
-her durch die trüben Wolken geht.«
+her durch die trüben Wolken geht.
 
-DAS VOLK
-nimmt wieder eine jubelnd bewegte Haltung an und singt nun allein. Die Meister auf der Bühne sowie die anderen Teilnehmer am Gesange geben sich dem Schauspiele des Volksjubels hin
+\speaker{Das Volk}
+
+\direct{nimmt wieder eine jubelnd bewegte Haltung an und singt nun allein. Die Meister auf der Bühne sowie die anderen Teilnehmer am Gesange geben sich dem Schauspiele des Volksjubels hin}
+
 Heil Sachs! Heil dir, Sachs!
 Heil Nürnbergs teurem Sachs! Heil! Heil!
 
-Sachs, der unbeweglich, wie geistesabwesend, über die Menge hinweg geblickt hatte, richtet endlich seine Blicke vertrauter auf sie und beginnt mit ergriffener, schnell sich festigender Stimme
+
+\direct{\Sachs, der unbeweglich, wie geistesabwesend, über die Menge hinweg geblickt hatte, richtet endlich seine Blicke vertrauter auf sie und beginnt mit ergriffener, schnell sich festigender Stimme}
+
 
 \Sachsspeaks
 Euch macht Ihr's leicht, mir macht Ihr's schwer,
@@ -5767,16 +5817,22 @@ die niemals soll beweinen,
 dass Nürenberg mit höchstem Wert
 die Kunst und ihre Meister ehrt.
 
-Grosse Bewegung unter allen. Sachs geht auf Pogner zu, der ihm gerührt die Hand drückt
+
+\direct{Grosse Bewegung unter allen. Sachs geht auf Pogner zu, der ihm gerührt die Hand drückt}
+
 
 \Pognerspeaks
 O Sachs! Mein Freund! Wie dankenswert!
 Wie wisst Ihr, was mein Herz beschwert!
 
 \Sachsspeaks
-zu Pogner
+
+\direct{zu \Pogner}
+
 's war viel gewagt! Jetzt habt nur Mut!
-Er wendet sich zu Beckmesser, der fortwährend eifrig das Blatt mit dem Gedicht herausgezogen, memoriert, genau zu lesen versucht und oft verzweiflungsvoll sich den Schweiss getrocknet hat
+
+\direct{Er wendet sich zu \Beckmesser, der fortwährend eifrig das Blatt mit dem Gedicht herausgezogen, memoriert, genau zu lesen versucht und oft verzweiflungsvoll sich den Schweiss getrocknet hat}
+
 Herr Merker! Sagt, wie steht es? Gut?
 
 \Beckmesserspeaks
@@ -5787,7 +5843,7 @@ und hab' doch dran studiert genug!
 Mein Freund, 's ist Euch nicht aufgezwungen.
 
 \Beckmesserspeaks
-Was hilft's? - Mit dem meinen ist doch versungen!
+Was hilft's? Mit dem meinen ist doch versungen!
 's war Eure Schuld! Jetzt seid hübsch für mich!
 's wär' schändlich, liesst Ihr mich im Stich!
 
@@ -5796,13 +5852,14 @@ Ich dächt', Ihr gäbt's auf.
 
 \Beckmesserspeaks
 Warum nicht gar?
-Die and'ren sing' ich alle zu Paar', wenn Ihr nur nicht singt!
+Die and'ren sing' ich alle zu Paar',
+wenn Ihr nur nicht singt!
 
 \Sachsspeaks
 So seht, wie's geht!
 
 \Beckmesserspeaks
-Das Lied! - bin's sicher - zwar niemand versteht;
+Das Lied! Bin's sicher---zwar niemand versteht;
 doch bau' ich auf Eure Popularität.
 
 \Sachsspeaks
@@ -5810,21 +5867,31 @@ Nun denn, wenn's Meistern und Volk beliebt,
 zum Wettgesang man den Anfang gibt.
 
 \Kothnerspeaks
-tritt vor
+
+\direct{tritt vor}
+
 Ihr ledig' Meister, macht Euch bereit!
 Der Ältest' sich zuerst anlässt:
 Herr Beckmesser, Ihr fangt an, 's ist Zeit!
 
-Die Lehrbuben führen Beckmesser zu einem kleinen Rasenhügel vor der Singerbühne, welchen sie zuvor festgerammt und reich mit Blumen überdeckt haben
+
+\direct{Die Lehrbuben führen \Beckmesser zu einem kleinen Rasenhügel vor der Singerbühne, welchen sie zuvor festgerammt und reich mit Blumen überdeckt haben}
+
 
 \Beckmesserspeaks
-strauchelt darauf, tritt unsicher und schwankt
+
+\direct{strauchelt darauf, tritt unsicher und schwankt}
+
 Zum Teufel! Wie wackelig! Macht das hübsch fest!
 
-Die Buben lachen unter sich und stopfen lustig am Rasen
 
-DAS VOLK
-stösst sich gegenseitig lustig an
+\direct{Die Buben lachen unter sich und stopfen lustig am Rasen}
+
+
+\speaker{Das Volk}
+
+\direct{stösst sich gegenseitig lustig an}
+
 Wie, der? Der wirbt? Scheint mir nicht der Rechte!
 An der Tochter Stell' ich den nicht möchte.
 Seid still! 's ist gar ein tücht'ger Meister!
@@ -5839,10 +5906,14 @@ Gott, ist der dumm!
 Still! Macht keinen Witz!
 Er fällt fast um!
 Der hat im Rate Stimm und Sitz!
-Viele lachen
 
-DIE LEHRBUBEN
-in Aufstellung
+\direct{Viele lachen}
+
+
+\speaker{Die Lehrbuben}
+
+\direct{in Aufstellung}
+
 Silentium! Silentium!
 Macht kein Reden und kein Gesumm!
 
@@ -5850,15 +5921,19 @@ Macht kein Reden und kein Gesumm!
 Fanget an!
 
 \Beckmesserspeaks
-der sich endlich mit Mühe auf dem Rasenhügel festgestellt hat, macht eine erste Verbeugung gegen die Meister, eine zweite gegen das Volk, dann gegen Eva, auf welche er, da sie sich abwendet, nochmals verlegen hinblinzelt. Grosse Beklommenheit erfasst ihn; er sucht sich durch das Vorspiel auf der Laute zu ermutigen
-"Morgen ich leuchte in rosigem Schein,
-von Blut und Duft geht schnell die Luft; -
-wohl bald gewonnen wie zerronnen -
-im Garten lud ich ein - garstig und fein.«
 
-Er versucht, besser auf den Füssen zu stehen. Die Meistersinger leise unter sich
+\direct{der sich endlich mit Mühe auf dem Rasenhügel festgestellt hat, macht eine erste Verbeugung gegen die Meister, eine zweite gegen das Volk, dann gegen \Eva, auf welche er, da sie sich abwendet, nochmals verlegen hinblinzelt. Grosse Beklommenheit erfasst ihn; er sucht sich durch das Vorspiel auf der Laute zu ermutigen}
 
-DIE MEISTER
+``Morgen ich leuchte in rosigem Schein,
+von Blut und Duft geht schnell die Luft;
+wohl bald gewonnen wie zerronnen---
+im Garten lud ich ein---garstig und fein.''
+
+
+\direct{Er versucht, besser auf den Füssen zu stehen. Die Meistersinger leise unter sich}
+
+
+\speaker{Die Meister}
 Mein! Was ist das?
 Ist er von Sinnen?
 Was ist das?
@@ -5866,54 +5941,70 @@ Ist er von Sinnen?
 Höchst merkwürd'ger Fall! Was kommt ihm bei?
 Woher mocht' er solche Gedanken gewinnen?
 
-VOLK
-leise unter sich
+\speaker{Volk}
+
+\direct{leise unter sich}
+
 Sonderbar! Hört ihr's? Wen lud er ein?
 Verstand man recht? Wie kann das sein?
 
 \Beckmesserspeaks
-zieht das Blatt verstohlen hervor und lugt eifrig hinein; dann steckt er es ängstlich wieder ein
-Wohn' ich erträglich im selbigen Raum,
-hol' Gold und Frucht - Bleisaft und Wucht.
-Er lugt in das Blatt
-Mich holt am Pranger - der Verlanger -
-auf luft'ger Steige kaum - häng' ich am Baum.«
-Er wackelt wieder sehr; sucht im Blatt zu lesen, vermag es nicht,' ihm schwindelt, Angstschweiss bricht aus
 
-DAS VOLK
+\direct{zieht das Blatt verstohlen hervor und lugt eifrig hinein; dann steckt er es ängstlich wieder ein}
+
+``Wohn' ich erträglich im selbigen Raum,
+hol' Geld und Frucht---Bleisaft und Wucht.''
+
+\direct{Er lugt in das Blatt}
+
+``Mich holt am Pranger---der Verlanger---
+auf luft'ger Steige kaum---häng' ich am Baum.''
+
+\direct{Er wackelt wieder sehr; sucht im Blatt zu lesen, vermag es nicht,' ihm schwindelt, Angstschweiss bricht aus}
+
+
+\speaker{Das Volk}
 Schöner Werber! Der find't wohl seinen Lohn:
 bald hängt er am Galgen; man sieht ihn schon.
 
-DIE MEISTER
+\speaker{Die Meister}
 Was soll das heissen?
 Ist er nur toll?
 Sein Lied ist ganz von Unsinn voll!
 
 \Beckmesserspeaks
-rafft sich verzweiflungsvoll und ingrimmig auf
-"Heimlich mir graut,
+
+\direct{rafft sich verzweiflungsvoll und ingrimmig auf}
+
+``Heimlich mir graut,
 weil hier es munter will hergeh'n:
 an meiner Leiter stand ein Weib,
 sie schämt' und wollt' mich nicht beseh'n.
 Bleich wie ein Kraut
-umfasset mir Hanf meinen Leib; -
-mit Augen zwinkend - der Hund blies winkend -
-was ich vor langem verzehrt -
-wie Frucht, so Holz und Pferd -
-vom Leberbaum.«
-Alles bricht in ein dröhnendes Gelächter aus
+umfasset mir Hanf meinen Leib;
+mit Augen zwinkend, der Hund blies winkend,
+was ich vor langem verzehrt,
+wie Frucht, so Holz und Pferd,
+vom Leberbaum.''
+
+\direct{Alles bricht in ein dröhnendes Gelächter aus}
+
 
 \Beckmesserspeaks
-verlässt wütend den Hügel und stürzt auf Sachs zu
+
+\direct{verlässt wütend den Hügel und stürzt auf Sachs zu}
+
 Verdammter Schuster, das dank' ich dir!
 Das Lied, es ist gar nicht von mir.
 Von Sachs, der hier so hoch verehrt,
 von Eurem Sachs ward mir's beschert!
 Mich hat der Schändliche bedrängt,
 sein schlechtes Lied mir aufgehängt.
-Er stürzt wütend fort und verliert sich unter dem Volke
 
-VOLK
+\direct{Er stürzt wütend fort und verliert sich unter dem Volke}
+
+
+\speaker{Volk}
 Mein! Was soll das sein? Jetzt wird's immer bunter!
 Von Sachs das Lied? Das nähm' uns doch wunder!
 
@@ -5926,11 +6017,13 @@ Welch ein Skandal!
 \Vogelgesangspeaks
 Von Euch das Lied?
 
-ORTEL und FOLTZ
+\speaker{\Ortel Und \Foltz}
 Welch eig'ner Fall!
 
 \Sachsspeaks
-hat ruhig das Blatt, welches ihm Beckmesser hingeworfen, aufgenommen
+
+\direct{hat ruhig das Blatt, welches ihm \Beckmesser hingeworfen, aufgenommen}
+
 Das Lied fürwahr ist nicht von mir.
 Herr Beckmesser irrt wie dort so hier!
 Wie er dazu kam, mag selbst er sagen;
@@ -5938,10 +6031,10 @@ doch möcht' ich nie mich zu rühmen wagen,
 ein Lied, so schön wie dies erdacht,
 sei von mir, Hans Sachs, gemacht.
 
-MEISTERSINGER
+\speaker{Meistersinger}
 Wie? Schön? Dieser Unsinnswust!
 
-VOLK
+\speaker{Volk}
 Hört, Sachs macht Spass! Er sagt es nur zur Lust.
 
 \Sachsspeaks
@@ -5959,12 +6052,14 @@ Ich bin verklagt und muss besteh'n:
 drum lasst mich meinen Zeugen auserseh'n!
 Ist jemand hier, der Recht mir weiss,
 der tret' als Zeug' in diesen Kreis!
-Walther tritt aus dem Volke hervor und begrüsst Sachs, sodann Meister und Volk mit ritterlicher Freundlichkeit. Es entsteht sogleich eine angenehme Bewegung. Alles weilt einen Augenblick schweigend in seiner Betrachtung
+
+\direct{\Walther tritt aus dem Volke hervor und begrüsst Sachs, sodann Meister und Volk mit ritterlicher Freundlichkeit. Es entsteht sogleich eine angenehme Bewegung. Alles weilt einen Augenblick schweigend in seiner Betrachtung}
+
 So zeuget, das Lied sei nicht von mir,
 und zeuget auch, dass, was ich hier
 vom Lied hab' gesagt, zuviel nicht sei gewagt.
 
-DIE MEISTER
+\speaker{Die Meister}
 Wie fein ist Sachs! Ei Sachs, Ihr seid gar fein!
 Doch mag es heut' geschehen sein!
 
@@ -5972,7 +6067,7 @@ Doch mag es heut' geschehen sein!
 Der Regel Güte daraus man erwägt,
 dass sie auch mal 'ne Ausnahm' verträgt.
 
-DAS VOLK
+\speaker{Das Volk}
 Ein guter Zeuge, stolz und kühn!
 Mich dünkt, dem kann wohl was Gut's erblühn.
 
@@ -5983,8 +6078,10 @@ Herr Walther von Stolzing, singt das Lied!
 Ihr Meister lest, ob's ihm geriet.
 Er übergibt Kothner das Blatt zum Nachlesen
 
-DIE LEHRBUBEN
-in Aufstellung
+\speaker{Die Lehrbuben}
+
+\direct{in Aufstellung}
+
 Alles gespannt! 's gibt kein Gesumm.
 Da rufen wir auch nicht Silentium!
 
@@ -5994,24 +6091,31 @@ Da rufen wir auch nicht Silentium!
 ``Morgenlich leuchtend in rosigem Schein,
 von Blüt' und Duft geschwellt die Luft,
 voll aller Wonnen, nie ersonnen,
-ein Garten lud mich ein -
-Kothner lässt das Blatt, in welchem er mit den anderen Meistern eifrig nachzulesen begonnen, vor Ergriffenheit unwillkürlich fallen; er und die übrigen hören nur noch teilnahmsvoll zu
-Wie entrückt.
-dort unter einem Wunderbaum,
+ein Garten lud mich ein,''
+
+
+\direct{Kothner lässt das Blatt, in welchem er mit den anderen Meistern eifrig nachzulesen begonnen, vor Ergriffenheit unwillkürlich fallen; er und die übrigen hören nur noch teilnahmsvoll zu}
+
+
+\direct{Wie entrückt.}
+
+``dort unter einem Wunderbaum,
 von Früchten reich behangen,
 zu schaun in sel'gem Liebestraum,
 was höchstem Lustverlangen
-Erfüllung kühn verhiess -
+Erfüllung kühn verhiess,
 das schönste Weib, Eva im Paradies.''
 
 \speaker{Das Volk}
+
 \direct{leise flüsternd}
 
 Das ist was andres! Wer hätt's gedacht?
 Was doch recht Wort und Vortrag macht!
 
 \speaker{Die Meistersinger}
-\direct{ohne Foltz und Schwarz, leise flüsternd}
+
+\direct{ohne \Foltz und \Schwarz, leise flüsternd}
 
 Jawohl! Ich merk'! 's ist ein ander Ding,
 
@@ -6019,6 +6123,7 @@ Jawohl! Ich merk'! 's ist ein ander Ding,
 Zeuge am Ort, fahret fort!
 
 \Waltherspeaks
+
 ``Abendlich dämmernd umschloss mich die Nacht;
 auf steilem Pfad war ich genaht
 zu einer Quelle reiner Welle,
@@ -6032,6 +6137,7 @@ das hehrste Weib,
 die Muse des Parnass.''
 
 \speaker{Das Volk}
+
 \direct{immer leiser, für sich}
 
 Wie so hold und traut, wie fern es schwebt,
@@ -6046,7 +6152,9 @@ doch wohlgereimt und singebar.
 Zeuge wohl erkiest, fahret fort und schliesst!
 
 \Waltherspeaks
+
 \direct{sehr feurig}
+
 ``Huldreichster Tag,
 dem ich aus Dichters Traum erwacht!
 Das ich erträumt, das Paradies,
@@ -6063,9 +6171,12 @@ durch Sanges Sieg gewonnen
 Parnass und Paradies!''
 
 \speaker{Volk}
+
 Gewiegt wie in den schönsten Traum,
 hör' ich es wohl, doch fass es kaum.
-zu Eva
+
+\direct{zu Eva}
+
 Reich ihm das Reis! Sein sei der Preis!
 Keiner wie er zu werben weiss!
 
@@ -6078,20 +6189,23 @@ Dein Sang erwarb dir Meisterpreis!
 Keiner so wie nur er zu werben weiss!
 
 \Pognerspeaks
-\direct{mit grosser Ergriffenheit zu Sachs sich wendend}
+
+\direct{mit grosser Ergriffenheit zu \Sachs sich wendend}
 
 O Sachs! Dir dank' ich Glück und Ehr'!
 Vorüber nun all Herzbeschwer!
 
-\direct{Walther ist auf die Stufen der Singerbühne geleitet worden und lässt sich vor Eva auf ein Knie nieder}
+\direct{\Walther ist auf die Stufen der Singerbühne geleitet worden und lässt sich vor \Eva auf ein Knie nieder}
 
 \Evaspeaks
-\direct{zu Walther, indem sie ihn mit einem Kranz aus Lorbeer und Myrten bekränzt, sich hinabneigend}
+
+\direct{zu \Walther, indem sie ihn mit einem Kranz aus Lorbeer und Myrten bekränzt, sich hinabneigend}
 
 Keiner wie du so hold zu werben weiss!
 
 \Sachsspeaks
-\direct{zum Volk gewandt, auf Walther und Eva deutend}
+
+\direct{zum Volk gewandt, auf \Walther und \Eva deutend}
 
 Den Zeugen, denk es, wählt' ich gut:
 tragt Ihr Hans Sachs drum üblen Mut?
@@ -6103,7 +6217,7 @@ Hans Sachs! Nein! Das war schön erdacht!
 Das habt Ihr einmal wieder gut gemacht!
 
 \speaker{Meistersinger}
-\direct{sich feierlich zu Pogner wendend}
+\direct{sich feierlich zu \Pogner wendend}
 
 Auf, Meister Pogner! Euch zum Ruhm
 meldet dem Junker sein Meistertum.
@@ -6118,13 +6232,15 @@ nehm' ich Euch auf in der Meister Gild'.
 \direct{mit schmerzlicher Heftigkeit abweisend}
 
 Nicht Meister! Nein!
-Er blickt zärtlich auf Eva
+
+\direct{Er blickt zärtlich auf \Eva}
+
 Will ohne Meister selig sein!
 
-\direct{Alles blickt in grosser Betroffenheit auf Sachs}
+\direct{Alles blickt in grosser Betroffenheit auf \Sachs}
 
 \Sachsspeaks
-\direct{schreitet auf Walther zu und fasst ihn bedeutungsvoll bei der Hand}
+\direct{schreitet auf \Walther zu und fasst ihn bedeutungsvoll bei der Hand}
 
 Verachtet mir die Meister nicht
 und ehrt mir ihre Kunst!
@@ -6167,8 +6283,7 @@ das Heil'ge Röm'sche Reich,
 uns bliebe gleich
 die heil'ge deutsche Kunst!
 
-\StageDir{
-Während des Schlussgesangs nimmt Eva den Kranz von Walthers Stirn und drückt ihn Sachs auf; dieser nimmt die Kette aus Pogners Hand und hängt sie Walther um. Nachdem Sachs das Paar umarmt, bleiben Walther und Eva zu beiden Seiten an Sachs' Schultern gestützt; Pogner lässt sich, wie huldigend, auf ein Knie vor Sachs nieder. Die Meistersinger deuten auf Sachs als auf ihr Haupt}
+\StageDir{Während des Schlussgesangs nimmt \Eva den Kranz von Walthers Stirn und drückt ihn \Sachs auf; dieser nimmt die Kette aus Pogners Hand und hängt sie \Walther um. Nachdem \Sachs das Paar umarmt, bleiben \Walther und \Eva zu beiden Seiten an \Sachs' Schultern gestützt; \Pogner lässt sich, wie huldigend, auf ein Knie vor \Sachs nieder. Die Meistersinger deuten auf \Sachs als auf ihr Haupt.}
 
 
 \speaker{Alle}
@@ -6182,7 +6297,6 @@ uns bliebe gleich
 die heil'ge deutsche Kunst!
 
 \StageDir{Das Volk schwenkt begeistert Hüte und Tücher; die Lehrbuben tanzen und schlagen jauchzend in die Hände}
-
 
 \speaker{Volk}
 
