Minor modifications to stagedirections at end of die Walküre

--- a/dw/dw_de.tex
+++ b/dw/dw_de.tex
@@ -3392,8 +3392,6 @@ zertritt die Traute, zertrümmre die Maid,
 ihres Leibes Spur zerstöre dein Speer:
 doch gib, Grausamer, nicht
 der gräßlichsten Schmach sie preis!
- 
-
 
 \direct{mit wilder Begeisterung}
 
@@ -3403,7 +3401,6 @@ es leck' ihre Zung', es fresse ihr Zahn
 den Zagen, der frech sich wagte,
 dem freislichen Felsen zu nahn!
  
-
 \Wotanspeaks
 
 \direct{überwältigt und tief ergriffen, wendet sich lebhhaft zu Brünnhilde, erhebt sie von den Knien und blickt ihr gerührt in das Auge}
@@ -3411,8 +3408,6 @@ dem freislichen Felsen zu nahn!
 Leb' wohl, du kühnes, herrliches Kind!
 Du meines Herzens heiligster Stolz!
 Leb' wohl! Leb' wohl! Leb' wohl!
- 
-
 
 \direct{sehr leidenschaftlich}
 
@@ -3428,7 +3423,7 @@ wie nie einer Braut es gebrannt!
 Flammende Glut umglühe den Fels;
 mit zehrenden Schrecken
 scheuch' es den Zagen;
-der Feige fliehe Brünnhildes Fels! -
+der Feige fliehe Brünnhildes Fels!
 Denn einer nur freie die Braut,
 der freier als ich, der Gott!
  
@@ -3441,7 +3436,7 @@ das oft ich lächelnd gekost,
 wenn Kampfeslust ein Kuß dir lohnte,
 wenn kindisch lallend der Helden Lob
 von holden Lippen dir floß:
- dieser Augen strahlendes Paar,
+dieser Augen strahlendes Paar,
 das oft im Sturm mir geglänzt,
 wenn Hoffnungssehnen das Herz mir sengte,
 nach Weltenwonne mein Wunsch verlangte
@@ -3481,13 +3476,13 @@ Loge! Loge! Hieher!
  
 
 
-\direct{Dem Stein entfährt ein Feuerstrahl, der zur allmählich immer helleren Flammenglut anschwillt. Lichte Flackerlohe bricht aus. Lichte Brunst umgibt Wotan mit wildem Flackern. Er weist mit dem Speere gebieterisch dem Feuermeere den Umkreis des Felsenrandes zur Strömung an; alsbald zieht es sich nach dem Hintergrunde, wo es nun fortwährend den Bergsaum umlodert}
+\StageDir{Dem Stein entfährt ein Feuerstrahl, der zur allmählich immer helleren Flammenglut anschwillt. Lichte Flackerlohe bricht aus. Lichte Brunst umgibt Wotan mit wildem Flackern. Er weist mit dem Speere gebieterisch dem Feuermeere den Umkreis des Felsenrandes zur Strömung an; alsbald zieht es sich nach dem Hintergrunde, wo es nun fortwährend den Bergsaum umlodert.}
 
 Wer meines Speeres Spitze fürchtet,
 durchschreite das Feuer nie!
  
 
-\direct{Er streckt den Speer wie zum Banne aus, dann blickt er schmerzlich auf Brünnhilde zurück, wendet sich langsam zum Gehen und blickt noch einmal zurück, ehe er durch das Feuer verschwindet. Der Vorhang fällt}
+\StageDir{Er streckt den Speer wie zum Banne aus, dann blickt er schmerzlich auf Brünnhilde zurück, wendet sich langsam zum Gehen und blickt noch einmal zurück, ehe er durch das Feuer verschwindet. Der Vorhang fällt.}
 
 
 
